// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render IntervenantForm correctly with intervenant data 1`] = `
<div
  className="css-1l46jj7"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-17"
        id="field-17-label"
      >
        First name
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue="Jodie"
        disabled={false}
        id="field-17"
        name="profile.firstName"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="text"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-18"
        id="field-18-label"
      >
        Last name
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue="Copeland"
        disabled={false}
        id="field-18"
        name="profile.lastName"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="text"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-19"
        id="field-19-label"
      >
        Email address
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue="jodie.copeland@gmail.com"
        disabled={false}
        id="field-19"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="email"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-20"
        id="field-20-label"
      >
        Home Address
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue="930 Lewis Avenue, Bonanza, Idaho, 7682"
        disabled={false}
        id="field-20"
        name="address"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="text"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-21"
        id="field-21-label"
      >
        Are you active ?
      </label>
      <div
        className="chakra-radio-group css-wlea3r"
        role="radiogroup"
      >
        <div
          className="chakra-stack css-9gj9xm"
        >
          <label
            className="chakra-radio css-78joka"
          >
            <input
              checked={true}
              className="chakra-radio__input"
              disabled={false}
              id="radio-23"
              name="radio-22"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              readOnly={false}
              required={false}
              style={
                Object {
                  "border": "0px",
                  "clip": "rect(0px, 0px, 0px, 0px)",
                  "height": "1px",
                  "margin": "-1px",
                  "overflow": "hidden",
                  "padding": "0px",
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": "1px",
                }
              }
              type="radio"
              value={true}
            />
            <span
              aria-hidden={true}
              className="chakra-radio__control css-ssalds"
              data-checked=""
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
            />
            <span
              className="chakra-radio__label css-1y8kf23"
              data-checked=""
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              Yes
            </span>
          </label>
          <label
            className="chakra-radio css-78joka"
          >
            <input
              checked={false}
              className="chakra-radio__input"
              disabled={false}
              id="radio-24"
              name="radio-22"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              readOnly={false}
              required={false}
              style={
                Object {
                  "border": "0px",
                  "clip": "rect(0px, 0px, 0px, 0px)",
                  "height": "1px",
                  "margin": "-1px",
                  "overflow": "hidden",
                  "padding": "0px",
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": "1px",
                }
              }
              type="radio"
              value={false}
            />
            <span
              aria-hidden={true}
              className="chakra-radio__control css-ssalds"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
            />
            <span
              className="chakra-radio__label css-1y8kf23"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              No
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="css-1bvc4cc"
    >
      <button
        className="chakra-button css-1xx8uq7"
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;

exports[`should render IntervenantForm correctly 1`] = `
<div
  className="css-1l46jj7"
>
  <form
    onSubmit={[Function]}
  >
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-1"
        id="field-1-label"
      >
        First name
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue=""
        disabled={false}
        id="field-1"
        name="profile.firstName"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="text"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-2"
        id="field-2-label"
      >
        Last name
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue=""
        disabled={false}
        id="field-2"
        name="profile.lastName"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="text"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-3"
        id="field-3-label"
      >
        Email address
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue=""
        disabled={false}
        id="field-3"
        name="email"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="email"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-4"
        id="field-4-label"
      >
        Home Address
      </label>
      <input
        className="chakra-input css-wlea3r"
        defaultValue=""
        disabled={false}
        id="field-4"
        name="address"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        readOnly={false}
        required={false}
        type="text"
      />
    </div>
    <div
      className="chakra-form-control css-1kxonj9"
      role="group"
    >
      <label
        className="chakra-form__label css-uvho5g"
        htmlFor="field-8"
        id="field-8-label"
      >
        Are you active ?
      </label>
      <div
        className="chakra-radio-group css-wlea3r"
        role="radiogroup"
      >
        <div
          className="chakra-stack css-9gj9xm"
        >
          <label
            className="chakra-radio css-78joka"
          >
            <input
              checked={false}
              className="chakra-radio__input"
              disabled={false}
              id="radio-5"
              name="radio-7"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              readOnly={false}
              required={false}
              style={
                Object {
                  "border": "0px",
                  "clip": "rect(0px, 0px, 0px, 0px)",
                  "height": "1px",
                  "margin": "-1px",
                  "overflow": "hidden",
                  "padding": "0px",
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": "1px",
                }
              }
              type="radio"
              value={true}
            />
            <span
              aria-hidden={true}
              className="chakra-radio__control css-ssalds"
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
            />
            <span
              className="chakra-radio__label css-1y8kf23"
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              Yes
            </span>
          </label>
          <label
            className="chakra-radio css-78joka"
          >
            <input
              checked={true}
              className="chakra-radio__input"
              disabled={false}
              id="radio-6"
              name="radio-7"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              readOnly={false}
              required={false}
              style={
                Object {
                  "border": "0px",
                  "clip": "rect(0px, 0px, 0px, 0px)",
                  "height": "1px",
                  "margin": "-1px",
                  "overflow": "hidden",
                  "padding": "0px",
                  "position": "absolute",
                  "whiteSpace": "nowrap",
                  "width": "1px",
                }
              }
              type="radio"
              value={false}
            />
            <span
              aria-hidden={true}
              className="chakra-radio__control css-ssalds"
              data-checked=""
              onMouseDown={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
            />
            <span
              className="chakra-radio__label css-1y8kf23"
              data-checked=""
              onMouseDown={[Function]}
              onTouchStart={[Function]}
            >
              No
            </span>
          </label>
        </div>
      </div>
    </div>
    <div
      className="css-1bvc4cc"
    >
      <button
        className="chakra-button css-1xx8uq7"
        type="submit"
      >
        Save
      </button>
    </div>
  </form>
</div>
`;
